--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.2"
+  },
+  "engines": {
+    "node": "20.0"
   }
+  
 }
